--- a/.env.example
+++ b/.env.example
@@ -20,7 +20,10 @@ LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=sqlite
+
+DB_CONNECTION=pgsql
+DB_URL=postgresql://postgres.vlcyusrxdnldvwmpqhcy:@hikari123@aws-0-ap-southeast-1.pooler.supabase.com:6543/postgres
+# DB_CONNECTION=sqlite
 # DB_HOST=127.0.0.1
 # DB_PORT=3306
 # DB_DATABASE=laravel
