--- a/.env.example
+++ b/.env.example
@@ -68,3 +68,7 @@ AWS_USE_PATH_STYLE_ENDPOINT=false
 VITE_APP_NAME="${APP_NAME}"
 
 RAJAONGKIR_API_KEY = e0zwxwlL77acf5c26675e963qfbribuE
+
+MIDTRANS_CLIENT_KEY=SB-Mid-client-XvP2lBOdS_i2awc0
+MIDTRANS_SERVER_KEY=SB-Mid-server-DFd_qZ3ZL8zmA8a6vlxcndLb
+MIDTRANS_IS_PRODUCTION=false
