--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1",
         "livewire/livewire": "^3.6",
-        "midtrans/midtrans-php": "2.6.1"
+        "midtrans/midtrans-php": "2.6.1",
+        "mokhosh/filament-rating": "^1.4"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
