--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,8 @@
         "php": "^8.2",
         "afatmustafa/blade-hugeicons": "^1.0",
         "filament/filament": "^3.3",
+        "flowframe/laravel-trend": "^0.4.0",
+        "illuminate/contracts": "*",
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1",
         "livewire/livewire": "^3.6",
