--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "illuminate/contracts": "*",
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1",
+        "league/flysystem-aws-s3-v3": "^3.29",
         "livewire/livewire": "^3.6",
         "midtrans/midtrans-php": "2.6.1",
         "mokhosh/filament-rating": "^1.4"
