--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "flowframe/laravel-trend": "^0.4.0",
         "illuminate/contracts": "*",
         "laravel/framework": "^12.0",
+        "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.10.1",
         "league/flysystem-aws-s3-v3": "^3.29",
         "livewire/livewire": "^3.6",
